persistent_volume/nfs/pod1/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-nfs-pv-pod1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-nfs-pv-pod1
  template:
    metadata:
      labels:
        app: nginx-nfs-pv-pod1
    spec:
      containers:
        - name: nginx-nfs-pv-pod1
          image: nginx:latest
          volumeMounts:
            - mountPath: "/usr/share/nginx/html"
              name: nginx-pv-nfs-storage
      volumes:
        - name: nginx-pv-nfs-storage
          persistentVolumeClaim:
            claimName: pvc-nfs-optiplex1
