persistent_volume/nfs/pod1/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: webserver-nginx1
spec:
  selector:
    app: nginx-nfs-pv-pod1
  ports:
    - protocol: TCP
      port: 80
  type: LoadBalancer
